--- a/package.json
+++ b/package.json
@@ -5,20 +5,29 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack --mode development",
-    "watch": "cross-env NODE_ENV=development webpack-dev-server --mode development --open"
+    "watch": "cross-env NODE_ENV=development webpack-dev-server --mode development --open",
+    "build": "webpack"
   },
+  "browserslist": [
+    "> 1%",
+    "last 3 version"
+  ],
   "author": "Aleksey Stepanov stepanovl87@gmail.com",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^9.7.4",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^7.0.0",
     "css-loader": "^3.4.2",
+    "css-mqpacker": "^7.0.0",
+    "cssnano": "^4.1.10",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "path": "^0.12.7",
+    "postcss-loader": "^3.0.0",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
     "sass": "^1.25.0",
